# news

./: .gitignore  README.md
backend/: ai_news.db  pyproject.toml  sync_demo.db
backend/ai_news_bff.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/app/: main.py
backend/app/api/: routes.py
backend/app/core/: config.py
backend/app/db/: __init__.py  models.py  session.py
backend/app/models/: news.py
backend/app/repositories/: __init__.py  article_repository.py
backend/app/services/: arxiv_enrichment_service.py  html_source_service.py  news_service.py  rss_service.py  source_provider.py  sync_service.py
backend/tests/: test_api_routes.py  test_arxiv_enrichment_service.py  test_html_source_service.py  test_news_service.py  test_rss_service.py  test_rss_service_fetch.py  test_sync_service.py
frontend/: index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo
frontend/src/: App.tsx  api.ts  styles.css  types.ts
frontend/src/components/: NewsCard.tsx  NewsList.tsx
scripts/: deploy.sh
