[project]
name = "ai-news-bff"
version = "0.1.0"
description = "FastAPI BFF for aggregating AI news RSS feeds"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "httpx>=0.27.0",
  "feedparser>=6.0.11",
  "beautifulsoup4>=4.12.0",
  "lxml>=5.2.0",
  "sqlalchemy>=2.0.35",
  "psycopg[binary]>=3.2.0",
  "pydantic>=2.8.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
